# Lesson_10

./: .gitignore
Task_1/: CMakeLists.txt  main.cpp
Task_2/: CMakeLists.txt  main.cpp
Task_2/Figures/: EquilateralTriangle.cpp  IsoscelesTriangle.cpp  Parallelogram.cpp  Quadrilateral.cpp  Rectangle.cpp  Rhombus.cpp  RightTriangle.cpp  Square.cpp  Triangle.cpp
